--- a/Square3/Square3/Main.storyboard
+++ b/Square3/Square3/Main.storyboard
@@ -141,6 +141,9 @@
                                     <segment title="Sketchy"/>
                                     <segment title="Exact"/>
                                 </segments>
+                                <connections>
+                                    <action selector="representationMethodChanged:" destination="8rJ-Kc-sve" eventType="valueChanged" id="R0K-Il-IcZ"/>
+                                </connections>
                             </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
